Add app icon and version 3.2.1 for macOS bundle
- Configure macOS bundle with FunGen icon (icon.icns)
- Set version to 3.2.1 in app bundle
- Add bundle identifier: com.fungen.openfunscripter
- Icon now displays in Dock and Applications folder

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,7 +40,17 @@ if(WIN32)
 endif()
 
 if(APPLE)
-	add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${OPEN_FUNSCRIPTER_SOURCES})
+	set(MACOSX_BUNDLE_ICON_FILE icon.icns)
+	set(MACOSX_BUNDLE_BUNDLE_NAME "OpenFunscripter")
+	set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.fungen.openfunscripter")
+	set(MACOSX_BUNDLE_BUNDLE_VERSION "3.2.1")
+	set(MACOSX_BUNDLE_SHORT_VERSION_STRING "3.2.1")
+	set(MACOSX_BUNDLE_COPYRIGHT "FunGen Edition")
+
+	set(APP_ICON_MACOSX "${CMAKE_SOURCE_DIR}/data/icon.icns")
+	set_source_files_properties(${APP_ICON_MACOSX} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+
+	add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${OPEN_FUNSCRIPTER_SOURCES} ${APP_ICON_MACOSX})
 elseif(WIN32)
 	add_executable(${PROJECT_NAME} WIN32 ${OPEN_FUNSCRIPTER_SOURCES})
 else()
