Update SDL2 to v2.32.10 with macOS ARM64 fix
Changes:
- Update SDL2 submodule to release-2.32.10
- Point to forked SDL2 repository with ARM64 compilation fix
- Fix resolves submodule fetch errors for new clones

This fixes the issue where users reported:
'fatal: remote error: upload-pack: not our ref'
when running git submodule update --init --recursive

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,8 @@
 	url = https://github.com/ocornut/imgui.git
 [submodule "lib/SDL2"]
 	path = lib/SDL2
-	url = https://github.com/libsdl-org/SDL.git
+	url = https://github.com/ack00gar/SDL2.git
+	branch = macos-arm64-fix
 [submodule "lib/json"]
 	path = lib/json
 	url = https://github.com/nlohmann/json.git
