Fix Windows mpv extraction - use correct filename
The latest mpv builds use 'libmpv-2.dll' not 'mpv-2.dll'.
Extract and rename to match expected filename.

Verified by downloading and inspecting the actual archive.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,14 +106,15 @@ if(WIN32)
       if(NOT EXTRACT_RESULT EQUAL 0)
         message(FATAL_ERROR "Failed to extract mpv archive")
       endif()
-      # Find mpv-2.dll in extracted files
-      file(GLOB_RECURSE MPV_DLL_PATH "${CMAKE_BINARY_DIR}/**/mpv-2.dll")
+      # Find libmpv-2.dll and rename to mpv-2.dll
+      file(GLOB_RECURSE MPV_DLL_PATH "${CMAKE_BINARY_DIR}/**/libmpv-2.dll")
       if(MPV_DLL_PATH)
         list(GET MPV_DLL_PATH 0 MPV_DLL_PATH)
         file(COPY ${MPV_DLL_PATH} DESTINATION "${CMAKE_BINARY_DIR}")
-        message(STATUS "Found and copied mpv-2.dll")
+        file(RENAME "${CMAKE_BINARY_DIR}/libmpv-2.dll" "${CMAKE_BINARY_DIR}/mpv-2.dll")
+        message(STATUS "Found libmpv-2.dll and renamed to mpv-2.dll")
       else()
-        message(FATAL_ERROR "Could not find mpv-2.dll in extracted archive")
+        message(FATAL_ERROR "Could not find libmpv-2.dll in extracted archive")
       endif()
     else()
       message(FATAL_ERROR "Could not find mpv download URL. Please manually download mpv-dev-x86_64-v3-*.7z from https://github.com/zhongfly/mpv-winbuild/releases")
