Fix Windows mpv compatibility by using standard x86_64 build
Changed the automatic mpv download to use the standard x86_64 build
instead of the v3 variant. The v3 build requires newer CPUs with AVX2
and other advanced instruction sets, causing compatibility issues on
older systems.

Changes:
- Updated CMakeLists.txt regex to match standard x86_64 builds
- Updated README.md with correct download instructions
- Added explanatory comments about CPU compatibility

This resolves issues where mpv-dev-x86_64-v3 builds fail to work
while mpv-dev-x86_64 builds work correctly.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,7 +89,9 @@ if(WIN32)
          "${CMAKE_BINARY_DIR}/mpv-latest.json" SHOW_PROGRESS)
 
     file(READ "${CMAKE_BINARY_DIR}/mpv-latest.json" MPV_JSON)
-    string(REGEX MATCH "\"browser_download_url\"[^\"]*\"([^\"]*mpv-dev-x86_64-v3[^\"]*\\.7z)\"" _ ${MPV_JSON})
+    # Use standard x86_64 build (not v3) for better CPU compatibility
+    # v3 requires AVX2 and newer instruction sets that older CPUs don't have
+    string(REGEX MATCH "\"browser_download_url\"[^\"]*\"([^\"]*mpv-dev-x86_64-[0-9][^\"]*\\.7z)\"" _ ${MPV_JSON})
     set(MPV_DOWNLOAD_URL ${CMAKE_MATCH_1})
 
     if(MPV_DOWNLOAD_URL)
@@ -130,7 +132,7 @@ if(WIN32)
         message(FATAL_ERROR "Could not find libmpv-2.dll in extracted archive")
       endif()
     else()
-      message(FATAL_ERROR "Could not find mpv download URL. Please manually download mpv-dev-x86_64-v3-*.7z from https://github.com/zhongfly/mpv-winbuild/releases")
+      message(FATAL_ERROR "Could not find mpv download URL. Please manually download mpv-dev-x86_64-*.7z (NOT v3 variant) from https://github.com/zhongfly/mpv-winbuild/releases")
     endif()
   endif()
 
