Add CMake 4.x compatibility fix
Added CMP0150 policy to allow subprojects (like nlohmann/json) to use
older cmake_minimum_required versions. CMake 4.x removed compatibility
with CMake < 3.5, causing build errors.

This fixes the error:
"Compatibility with CMake < 3.5 has been removed from CMake"

Changes:
- Set CMP0150 policy to OLD when available (CMake 3.27+)
- Allows lib/json and other submodules to use older CMake versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 
+# CMake 4.x compatibility: Allow subprojects to use older minimum versions
+if(POLICY CMP0150)
+    cmake_policy(SET CMP0150 OLD)
+endif()
+
 project(scripter)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
