--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,13 +122,19 @@ if(WIN32)
         message(FATAL_ERROR "Failed to extract mpv archive (exit code: ${EXTRACT_RESULT})")
       endif()
       # Find and copy libmpv-2.dll
-      file(GLOB_RECURSE MPV_DLL_PATH "${CMAKE_BINARY_DIR}/**/libmpv-2.dll")
-      if(MPV_DLL_PATH)
-        list(GET MPV_DLL_PATH 0 MPV_DLL_PATH)
-        file(COPY ${MPV_DLL_PATH} DESTINATION "${CMAKE_BINARY_DIR}")
-        message(STATUS "Found and copied libmpv-2.dll")
+      # The DLL should be extracted to the root of CMAKE_BINARY_DIR
+      if(EXISTS "${CMAKE_BINARY_DIR}/libmpv-2.dll")
+        message(STATUS "Found libmpv-2.dll in build directory")
       else()
-        message(FATAL_ERROR "Could not find libmpv-2.dll in extracted archive")
+        # If not at root, search recursively
+        file(GLOB_RECURSE MPV_DLL_PATH "${CMAKE_BINARY_DIR}/libmpv-2.dll")
+        if(MPV_DLL_PATH)
+          list(GET MPV_DLL_PATH 0 MPV_DLL_PATH)
+          file(COPY ${MPV_DLL_PATH} DESTINATION "${CMAKE_BINARY_DIR}")
+          message(STATUS "Found and copied libmpv-2.dll from: ${MPV_DLL_PATH}")
+        else()
+          message(FATAL_ERROR "Could not find libmpv-2.dll in extracted archive")
+        endif()
       endif()
     else()
       message(FATAL_ERROR "Could not find mpv download URL. Please manually download mpv-dev-x86_64-*.7z (NOT v3 variant) from https://github.com/zhongfly/mpv-winbuild/releases")
