Set CMAKE_POLICY_VERSION_MINIMUM for CMake 4.x compatibility
Automatically set CMAKE_POLICY_VERSION_MINIMUM to 3.5 to allow
submodules with older cmake_minimum_required versions to work with
CMake 4.x.

This fixes the error on CMake 4.2.0-rc2:
"Compatibility with CMake < 3.5 has been removed from CMake"

Changes:
- Set CMAKE_POLICY_VERSION_MINIMUM=3.5 if not already defined
- Works alongside CMP0150 policy for full CMake 4.x compatibility
- No need for users to manually add the flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,11 @@ if(POLICY CMP0150)
     cmake_policy(SET CMP0150 OLD)
 endif()
 
+# For CMake 4.x, set minimum policy version to allow older submodules
+if(NOT DEFINED CMAKE_POLICY_VERSION_MINIMUM)
+    set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
+endif()
+
 project(scripter)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
