--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -8,10 +8,10 @@ env:
 
 jobs:
   macos:
-    runs-on: macos-latest
+    runs-on: macos-15-intel
           
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: 'true'
         fetch-depth: 0
@@ -55,7 +55,7 @@ jobs:
         cd ..
         find "./OpenFunscripter/bin/"
     
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: build
         path: ${{ github.workspace }}/bin
