--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -61,21 +61,93 @@ jobs:
           echo "APP_PATH=$APP_PATH" >> "$GITHUB_ENV"
           echo "Found: $APP_PATH"
 
-      # === Embarquer la vraie lib mpv versionnée (libmpv.N.dylib) ===
-      - name: Embed libmpv into app
+      - name: Vendor libmpv and deps into app (recursive)
         run: |
           set -euo pipefail
-          BREW_LIB_PATH="$(brew --prefix)/lib"
-          MPV_REAL="$(ls "$BREW_LIB_PATH"/libmpv*.dylib | grep -E 'libmpv\.[0-9]+\.dylib' | head -n1 || true)"
+          BREW_PREFIX="$(brew --prefix)"
+          BREW_LIB="$BREW_PREFIX/lib"
+          DEST="$APP_PATH/Contents/Frameworks"
+          mkdir -p "$DEST"
+
+          # 1) Trouver la vraie libmpv.*.dylib
+          MPV_REAL="$(ls "$BREW_LIB"/libmpv*.dylib | grep -E 'libmpv\.[0-9]+\.dylib' | head -n1 || true)"
           if [ -z "$MPV_REAL" ]; then
-            echo "libmpv not found in $BREW_LIB_PATH"; exit 1
+            echo "❌ libmpv.*.dylib introuvable sous $BREW_LIB"; exit 1
           fi
-          mkdir -p "$APP_PATH/Contents/Frameworks"
-          cp "$MPV_REAL" "$APP_PATH/Contents/Frameworks/"
-          BASENAME="$(basename "$MPV_REAL")"
-          install_name_tool -change "$MPV_REAL" \
-            "@executable_path/../Frameworks/$BASENAME" \
-            "$APP_PATH/Contents/MacOS/OpenFunscripter"
+          echo "Found mpv dylib: $MPV_REAL"
+
+          # 2) Fonction de copie + relink des dépendances Homebrew
+          relink_one() {
+            local FILE="$1"
+            # Liste les dépendances dynamiques
+            otool -L "$FILE" | awk 'NR>1 {print $1}' | grep -E "^$BREW_PREFIX/" || true
+          }
+
+          copy_and_relink() {
+            local SRC="$1"
+            local BASENAME="$(basename "$SRC")"
+            local TARGET="$DEST/$BASENAME"
+
+            # Copie si pas déjà là
+            if [ ! -f "$TARGET" ]; then
+              cp "$SRC" "$TARGET"
+              chmod 644 "$TARGET" || true
+              # Fixe l'install_name de la lib copiée
+              install_name_tool -id "@executable_path/../Frameworks/$BASENAME" "$TARGET"
+            fi
+
+            # Pour chaque dépendance Homebrew de cette lib, copie + rewrite
+            while IFS= read -r DEP; do
+              local DEPNAME="$(basename "$DEP")"
+              local DEPTARGET="$DEST/$DEPNAME"
+              # Copie la dépendance si nécessaire
+              if [ ! -f "$DEPTARGET" ]; then
+                mkdir -p "$DEST"
+                cp "$DEP" "$DEPTARGET"
+                chmod 644 "$DEPTARGET" || true
+                install_name_tool -id "@executable_path/../Frameworks/$DEPNAME" "$DEPTARGET"
+              fi
+              # Réécrit le chemin dans la lib courante
+              install_name_tool -change "$DEP" "@executable_path/../Frameworks/$DEPNAME" "$TARGET"
+            done < <(relink_one "$TARGET")
+          }
+
+          # 3) Copie/relink libmpv puis passe 2 fois sur les deps (closure grossière)
+          copy_and_relink "$MPV_REAL"
+          # Passe 2 fois pour attraper les deps de deps (ex: libass → freetype → zstd, etc.)
+          for ROUND in 1 2; do
+            for F in "$DEST"/*.dylib; do
+              [ -f "$F" ] || continue
+              while IFS= read -r DEP; do
+                DEPNAME="$(basename "$DEP")"
+                DEPTARGET="$DEST/$DEPNAME"
+                if [ ! -f "$DEPTARGET" ]; then
+                  cp "$DEP" "$DEPTARGET"
+                  chmod 644 "$DEPTARGET" || true
+                  install_name_tool -id "@executable_path/../Frameworks/$DEPNAME" "$DEPTARGET"
+                fi
+                install_name_tool -change "$DEP" "@executable_path/../Frameworks/$DEPNAME" "$F"
+              done < <(otool -L "$F" | awk 'NR>1 {print $1}' | grep -E "^$BREW_PREFIX/" || true)
+            done
+          done
+
+          # 4) Assure que l'exécutable principal pointe vers la bonne libmpv
+          MPV_BASENAME="$(basename "$MPV_REAL")"
+          install_name_tool -change "$MPV_REAL" "@executable_path/../Frameworks/$MPV_BASENAME" "$APP_PATH/Contents/MacOS/OpenFunscripter"
+
+      - name: Create launcher (set DYLD_FALLBACK_LIBRARY_PATH)
+        run: |
+          set -euo pipefail
+          BIN_DIR="$APP_PATH/Contents/MacOS"
+          REAL="$BIN_DIR/OpenFunscripter.real"
+          mv "$BIN_DIR/OpenFunscripter" "$REAL"
+          cat > "$BIN_DIR/OpenFunscripter" << 'EOF'
+#!/bin/bash
+APPDIR="$(cd "$(dirname "$0")" && pwd)"
+export DYLD_FALLBACK_LIBRARY_PATH="$APPDIR/../Frameworks${DYLD_FALLBACK_LIBRARY_PATH:+:$DYLD_FALLBACK_LIBRARY_PATH}"
+exec "$APPDIR/OpenFunscripter.real" "$@"
+EOF
+          chmod +x "$BIN_DIR/OpenFunscripter"
 
       - name: Inspect binary arch (should be x86_64)
         run: |
