--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -141,12 +141,14 @@ jobs:
           BIN_DIR="$APP_PATH/Contents/MacOS"
           REAL="$BIN_DIR/OpenFunscripter.real"
           mv "$BIN_DIR/OpenFunscripter" "$REAL"
-          cat > "$BIN_DIR/OpenFunscripter" << 'EOF'
-#!/bin/bash
-APPDIR="$(cd "$(dirname "$0")" && pwd)"
-export DYLD_FALLBACK_LIBRARY_PATH="$APPDIR/../Frameworks${DYLD_FALLBACK_LIBRARY_PATH:+:$DYLD_FALLBACK_LIBRARY_PATH}"
-exec "$APPDIR/OpenFunscripter.real" "$@"
-EOF
+
+          {
+            echo '#!/bin/bash'
+            echo 'APPDIR="$(cd "$(dirname "$0")" && pwd)"'
+            echo 'export DYLD_FALLBACK_LIBRARY_PATH="$APPDIR/../Frameworks${DYLD_FALLBACK_LIBRARY_PATH:+:$DYLD_FALLBACK_LIBRARY_PATH}"'
+            echo 'exec "$APPDIR/OpenFunscripter.real" "$@"'
+          } > "$BIN_DIR/OpenFunscripter"
+
           chmod +x "$BIN_DIR/OpenFunscripter"
 
       - name: Inspect binary arch (should be x86_64)
