--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -61,7 +61,7 @@ jobs:
           echo "APP_PATH=$APP_PATH" >> "$GITHUB_ENV"
           echo "Found: $APP_PATH"
 
-      - name: Vendor libmpv and deps into app (recursive)
+      - name: Vendor libmpv and ALL Homebrew deps into app (fixed-point)
         run: |
           set -euo pipefail
           BREW_PREFIX="$(brew --prefix)"
@@ -69,71 +69,95 @@ jobs:
           DEST="$APP_PATH/Contents/Frameworks"
           mkdir -p "$DEST"
 
-          # 1) Trouver la vraie libmpv.*.dylib
+          # 1) libmpv.*.dylib réelle (versionnée)
           MPV_REAL="$(ls "$BREW_LIB"/libmpv*.dylib | grep -E 'libmpv\.[0-9]+\.dylib' | head -n1 || true)"
           if [ -z "$MPV_REAL" ]; then
             echo "❌ libmpv.*.dylib introuvable sous $BREW_LIB"; exit 1
           fi
-          echo "Found mpv dylib: $MPV_REAL"
+          echo "Root dylib: $MPV_REAL"
 
-          # 2) Fonction de copie + relink des dépendances Homebrew
-          relink_one() {
-            local FILE="$1"
-            # Liste les dépendances dynamiques
-            otool -L "$FILE" | awk 'NR>1 {print $1}' | grep -E "^$BREW_PREFIX/" || true
-          }
+          # 2) Parcours BFS de toutes les deps Homebrew
+          queue=("$MPV_REAL")
+          copied_set=""
 
-          copy_and_relink() {
+          in_set() { case " $copied_set " in *" $1 "*) return 0;; *) return 1;; esac; }
+          add_set() { copied_set="$copied_set $1"; }
+
+          copy_if_needed() {
             local SRC="$1"
-            local BASENAME="$(basename "$SRC")"
-            local TARGET="$DEST/$BASENAME"
-
-            # Copie si pas déjà là
-            if [ ! -f "$TARGET" ]; then
-              cp "$SRC" "$TARGET"
-              chmod 644 "$TARGET" || true
-              # Fixe l'install_name de la lib copiée
-              install_name_tool -id "@executable_path/../Frameworks/$BASENAME" "$TARGET"
+            local BASE="$(basename "$SRC")"
+            local TGT="$DEST/$BASE"
+            if [ ! -f "$TGT" ]; then
+              # Résoudre les symlinks (ex: libavcodec.62.dylib -> libavcodec.62.xx.dylib)
+              REAL="$(stat -f %Y "$SRC" 2>/dev/null || echo "$SRC")"
+              cp "$REAL" "$TGT"
+              chmod 644 "$TGT" || true
+              install_name_tool -id "@executable_path/../Frameworks/$BASE" "$TGT"
             fi
-
-            # Pour chaque dépendance Homebrew de cette lib, copie + rewrite
-            while IFS= read -r DEP; do
-              local DEPNAME="$(basename "$DEP")"
-              local DEPTARGET="$DEST/$DEPNAME"
-              # Copie la dépendance si nécessaire
-              if [ ! -f "$DEPTARGET" ]; then
-                mkdir -p "$DEST"
-                cp "$DEP" "$DEPTARGET"
-                chmod 644 "$DEPTARGET" || true
-                install_name_tool -id "@executable_path/../Frameworks/$DEPNAME" "$DEPTARGET"
-              fi
-              # Réécrit le chemin dans la lib courante
-              install_name_tool -change "$DEP" "@executable_path/../Frameworks/$DEPNAME" "$TARGET"
-            done < <(relink_one "$TARGET")
+            echo "$TGT"
           }
 
-          # 3) Copie/relink libmpv puis passe 2 fois sur les deps (closure grossière)
-          copy_and_relink "$MPV_REAL"
-          # Passe 2 fois pour attraper les deps de deps (ex: libass → freetype → zstd, etc.)
-          for ROUND in 1 2; do
-            for F in "$DEST"/*.dylib; do
-              [ -f "$F" ] || continue
-              while IFS= read -r DEP; do
-                DEPNAME="$(basename "$DEP")"
-                DEPTARGET="$DEST/$DEPNAME"
-                if [ ! -f "$DEPTARGET" ]; then
-                  cp "$DEP" "$DEPTARGET"
-                  chmod 644 "$DEPTARGET" || true
-                  install_name_tool -id "@executable_path/../Frameworks/$DEPNAME" "$DEPTARGET"
-                fi
-                install_name_tool -change "$DEP" "@executable_path/../Frameworks/$DEPNAME" "$F"
-              done < <(otool -L "$F" | awk 'NR>1 {print $1}' | grep -E "^$BREW_PREFIX/" || true)
-            done
+          deps_of() {
+            # Retourne les deps Homebrew (chemins absolus sous BREW_PREFIX)
+            otool -L "$1" | awk 'NR>1 {print $1}' | grep -E "^$BREW_PREFIX/" || true
+          }
+
+          relink_dep() {
+            local HOLDER="$1"   # fichier à modifier
+            local OLD="$2"      # ancien chemin /usr/local/opt/.../*.dylib ou /opt/homebrew/...
+            local BASE="$(basename "$OLD")"
+            install_name_tool -change "$OLD" "@executable_path/../Frameworks/$BASE" "$HOLDER"
+          }
+
+          while [ ${#queue[@]} -gt 0 ]; do
+            SRC="${queue[0]}"; queue=("${queue[@]:1}")
+            # Résoudre symlink pour le set
+            SRC_REAL="$(stat -f %Y "$SRC" 2>/dev/null || echo "$SRC")"
+            if in_set "$SRC_REAL"; then continue; fi
+            add_set "$SRC_REAL"
+
+            TGT="$(copy_if_needed "$SRC_REAL")"
+
+            # Pour chaque dep Homebrew de TGT : relinker + enfile la dep réelle
+            while IFS= read -r DEP; do
+              [ -n "$DEP" ] || continue
+              relink_dep "$TGT" "$DEP"
+              case "$DEP" in
+                *.dylib)
+                  REAL="$(stat -f %Y "$DEP" 2>/dev/null || echo "$DEP")"
+                  queue+=("$REAL")
+                  ;;
+              esac
+            done < <(deps_of "$TGT")
           done
 
-          # 4) Assure que l'exécutable principal pointe vers la bonne libmpv
-          MPV_BASENAME="$(basename "$MPV_REAL")"
-          install_name_tool -change "$MPV_REAL" "@executable_path/../Frameworks/$MPV_BASENAME" "$APP_PATH/Contents/MacOS/OpenFunscripter"
+          # 4) L'exécutable principal doit pointer vers la libmpv copiée
+          MPV_BASE="$(basename "$MPV_REAL")"
+          install_name_tool -change "$MPV_REAL" "@executable_path/../Frameworks/$MPV_BASE" "$APP_PATH/Contents/MacOS/OpenFunscripter"
+
+      - name: Verify no Homebrew paths remain (should be CLEAN)
+        shell: bash
+        run: |
+          set -euo pipefail
+          OFFENDERS=0
+          check_one() {
+            local F="$1"
+            if otool -L "$F" | awk 'NR>1{print $1}' | grep -q "^$(brew --prefix)/"; then
+              echo "❌ Still links to Homebrew: $F"
+              otool -L "$F" | awk 'NR>1{print $1}' | grep "^$(brew --prefix)/" || true
+              OFFENDERS=1
+            fi
+          }
+          # Vérifie l'exécutable et toutes les dylibs vendorisées
+          check_one "$APP_PATH/Contents/MacOS/OpenFunscripter"
+          for F in "$APP_PATH/Contents/Frameworks/"*.dylib; do
+            [ -f "$F" ] && check_one "$F"
+          done
+          if [ $OFFENDERS -ne 0 ]; then
+            echo "Certaines libs pointent encore vers Homebrew — voir la liste ci-dessus."; exit 1
+          else
+            echo "✅ Aucun chemin Homebrew absolu restant. Bundle autonome."
+          fi
 
       - name: Create launcher (set DYLD_FALLBACK_LIBRARY_PATH)
         run: |
