--- a/.github/workflows/main8.yml
+++ b/.github/workflows/main8.yml
@@ -1,4 +1,4 @@
-name: CMake (macOS Intel7 — full self-contained build with libmpv)
+name: CMake (macOS Intel8 — full self-contained build with libmpv)
 
 on:
   workflow_dispatch:
@@ -101,12 +101,12 @@ jobs:
           REAL="$BIN_DIR/OpenFunscripter.real"
           mv "$BIN_DIR/OpenFunscripter" "$REAL" || true
 
-          cat > "$BIN_DIR/OpenFunscripter" <<'SCRIPT'
-#!/bin/bash
-APPDIR="$(cd "$(dirname "$0")" && pwd)"
-export DYLD_FALLBACK_LIBRARY_PATH="$APPDIR/../Frameworks${DYLD_FALLBACK_LIBRARY_PATH:+:$DYLD_FALLBACK_LIBRARY_PATH}"
-exec "$APPDIR/OpenFunscripter.real" "$@"
-SCRIPT
+          {
+            echo '#!/bin/bash'
+            echo 'APPDIR="$(cd "$(dirname "$0")" && pwd)"'
+            echo 'export DYLD_FALLBACK_LIBRARY_PATH="$APPDIR/../Frameworks${DYLD_FALLBACK_LIBRARY_PATH:+:$DYLD_FALLBACK_LIBRARY_PATH}"'
+            echo 'exec "$APPDIR/OpenFunscripter.real" "$@"'
+          } > "$BIN_DIR/OpenFunscripter"
 
           chmod +x "$BIN_DIR/OpenFunscripter"
 
